css/custom.css
@charset "UTF-8";
/* CSS Document */


.top-bar {
	background-color: #72bc44;
}
.contain-to-grid {
	background-color: #72bc44;
}
.top-bar-section li:not(.has-form) a:not(.button) {
	background-color: #72bc44;
}
#testimonials button:hover {
	color: transparent;
}
/* ------------------- 
	SPACING AND MARGIN
-------------------- */

.section-margin {
	margin-bottom: 15rem;
}
/* ------------------- 
	TYPOGRAPHY
-------------------- */
body {
	font-size: 2rem;
}
* {
	font-size: 1rem;
}
h1 {
	font-family: 'Nunito', sans-serif;
	font-size: 3rem;
	color: #72bc44;
}
h2 {
	font-family: 'Nunito', sans-serif;
	color: #72bc44;
}
h3 {
	font-family: 'Nunito', sans-serif;
	color: #72bc44;
}
p {
	font-family: 'Source Sans Pro', sans-serif;
	color: #0a8395;
}
.intro-text {
	font-size: 2rem;
}
/* --------- 
	HERO
------------ */
.hero {
	background: url(../img/hero-img-woman.jpg);
	background-size: cover;
	box-shadow: inset 0 0 0 125rem rgba(0,0,0,0.15);
	height: 80%;
}
.intro-text {
	padding-top: 20%;
	color: rgba(255,255,255,1);
	padding-bottom: 18.750rem;
}
.intro-text p {
	font-size: 1em;
}
.left-margin {
	margin-left: 3.125rem;
}
.panel {
	background-color: #F3F2F2;
	width: 100%;
}
#form-button-align {
	margin: 1rem 0 20rem 3.3rem;
}
.hero-button {
	background-color: transparent;
	-moz-border-radius: .875rem;
	-webkit-border-radius: .875rem;
	border-radius: .875rem;
	border: .125rem solid #72bc44;
	display: inline-block;
	cursor: pointer;
	color: #72bc44;
	font-family: 'Nunito', sans-serif;
	font-size: 1.0625rem;
	padding: .5625rem 2.5625rem;
	text-decoration: none;
}
a:hover.hero-button {
	background-color: #72bc44;
	color: #F8F5F6;
}
.panel-green {
	background-color: #72bc44;
}
#testimonial-callout {
	color: #F8F5F6;
	font-family: 'Source Sans Pro', sans-serif;
}
#click-below-txt {
	font-size: .6rem;
	color: white;
	margin: 0;
}
.see-more-link {
	color: white;
	position: relative;
	top: 4rem;
}
img.test {
	position: relative;
	bottom: 3rem;
}
/* --------- 
	ABOUT
------------ */
#about {
	background: url(../img/about-img-jason.jpg) no-repeat;
	background-position: right;
	background-size: 37.5rem;
	background-repeat: no-repeat;
	margin-top: 9.375rem;
}
#about-spacing {
	margin-bottom: 9.375rem;
}
.about-paragraph {
	margin-bottom: 5rem;
}
/* ------------- 
	TESTIMONIALS
----------------- */
#quote-spacing-section {
	margin-top: 9.375rem;
	margin-bottom: 5rem;
}
.play-button {
	position: relative;
	background: url(../img/testimonial-smiling-female-orange.png) center center no-repeat;
}
.play-button-man {
	position: relative;
	background: url(../img/testimonial-smiling-man-green.png) center center no-repeat;
}
.play-button:hover {
	background: url(../img/testimonial-smiling-female.png) center center no-repeat;
}
.play-button-man:hover {
	background: url(../img/testimonial-smiling-man.png) center center no-repeat;
}
.testimonial-img-padding {
	padding:0;
	}

/* ------------- 
	CONTACT
----------------- */ /*targeting all types of input for form. this a makes the form orange.*/



label {
	display: block;
}
input[type="text"], input[type="password"], input[type="date"], input[type="datetime"], input[type="datetime-local"], input[type="month"], input[type="week"], input[type="email"], input[type="number"], input[type="search"], input[type="tel"], input[type="time"], input[type="url"], input[type="color"], textarea {
	border: .1875rem solid #E49621;
	margin: 2rem;
}
.contact-form-button {
	background-color: transparent;
	-moz-border-radius: .875rem;
	-webkit-border-radius: .875rem;
	border-radius: .875rem;
	border: .125rem solid #72bc44;
	display: inline-block;
	cursor: pointer;
	color: #72bc44;
	font-family: 'Nunito', sans-serif;
	font-size: 1.0625rem;
	padding: .5625rem 2.5625rem;
	text-decoration: none;
}
/*targeting all types of input for form. this a makes the form orange.*/
	
	 /* ------------- 
	CONTACT 
----------------- */

	
/* --------- 
	FOOTER
------------ */
footer {
	background-color: #72bc44;
}
h4, small {
	color: #fff;
}
.footer-phone-number a, .footer-email a {
	color: #fff;
}
.footer-phone-number a:hover {
	color: #0a8395;
}
.footer-email a:hover {
	color: #0a8395;
}

/*.social-icons { -------SOCIAL ICON CSS---------
display:inline;	
}*/


/* --------- 
	FOOTER
------------ */
/* --------- ----
	MEDIA QUERIES
----------------- */
/*--------SMALL SCREENS------------*/
@media only screen {
} /* Define mobile styles */

/* max-width 640px, mobile-only styles, use when QAing mobile issues */
@media only screen and (max-width: 40em) {
#about {
	background-size: 12.5em;
	padding:0 0 9.375em 0;
	background-position-y: 1450px;
	background-position-x: 108px;
}
.hero {
	background-size: 100%;
    background-repeat: no-repeat;
}
.intro-text {
	padding-top: 10%;
	padding-bottom: 0;
}
.intro-text p {
	font-size: .8rem;
}
.form-center {
	margin: 0 5rem;
}
.footer-contact-info {
	padding: 0 2rem 2rem 0;
}
.hero-button {
	background-color: transparent;
	-moz-border-radius: .875rem;
	-webkit-border-radius: .875rem;
	border-radius: .875rem;
	border: 0.125rem solid #72bc44;
	display: inline-block;
	cursor: pointer;
	color: #72bc44;
	font-family: 'Nunito', sans-serif;
	font-size: .75rem;
	padding: .5625rem .9375rem;
	text-decoration: none;
	margin-bottom: 1.563rem;
}
.see-more-link {
	color: white;
	position: relative;
	right: 3rem;
	top: .8rem;
	font-size: .8em;
}
img.test {
	position: relative;
	top: 2rem;
}
#form-button-align {
	margin: 1rem 0 10rem 3.3rem;
}
form {
	margin: 0 0 1rem 0;
}
label {
	display: block;
}
#testimonial-callout {
	font-size: .7em;
	position:relative;
	top: 2em;
	padding:0 0 0 .6em;
	}

}

/*--------SMALL SCREENS------------*/

/*--------MEDIUM SCREENS------------*/
@media only screen and (min-width: 40.063em) {
.intro-text {
	padding-top: 5%;
	padding-bottom: .5em;
}
.hero {
	background: url(../img/hero-img-woman.jpg) no-repeat;
	background-size: 100%;
	box-shadow: inset 0 0 0 125rem rgba(0,0,0,0.15);
	height: 80%;
}
#about {
	background: url(../img/about-img-jason.png) no-repeat;
	background-position: right;
	background-repeat: no-repeat;
}
footer {
	width: 100%;
}
.form-center {
	margin: 0 10rem;
}
.footer-contact-info {
	padding: 0 2rem 2rem 0;
}
#form-button-align {
	margin: 1rem 0 20rem 3.3rem;
}
label {
	display: block;
}
form {
	margin: 0 0 15rem 0;
}
} /* min-width 641px, medium screens */

@media only screen and (min-width: 40.063em) and (max-width: 64em) {
.see-more-link {
	color: white;
	position: relative;
	top: 4rem;
	right: 2rem;
}
img.test {
	position: relative;
	top: 3rem;
}
form {
	    display: block;
    width: 100%;
    padding-right: 0;
	margin: 0 0 15rem 0;
}

label {
	display: block;
}

/*--------MEDIUM SCREENS------------*/

/*--------LARGE SCREENS------------*/
} /* min-width 641px and max-width 1024px, use when QAing tablet-only issues */

@media only screen and (min-width: 64.063em) {
.hero {
	background: url(../img/hero-img-woman.jpg);
	background-size: cover;
	box-shadow: inset 0 0 0 125rem rgba(0,0,0,0.15);
	height: 80%;
}
.intro-text {
	padding-top: 18%;
	padding-bottom: 9rem;
}
.footer-contact-info {
	padding: 0 2rem 2rem 0;
	margin-right: 0;
}
form {
	margin: 0 0 10rem 0;
	display: block;
	width: 100%;
	padding-right: 0;
}
#form-button-align {
	margin: 1rem 0 15rem 3.3rem;
}
} /* min-width 1025px, large screens */

/* min-width 1025px and max-width 1440px, use when QAing large screen-only issues */
@media only screen and (min-width: 64.063em) and (max-width: 90em) {
.form-center-large {
	padding: 10rem 0 0 20rem;
}
}

